Amend HBASE-12160 Make Surefire's argLine configurable in the command line; Fix merge error